# TieredANN

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  calculate_groundtruth_intersection.py  docker-compose.yml  visualize_all_experiments.sh  visualize_all_logs.sh  visualize_dataset_experiments.sh  visualize_logs.py  visualize_logs_multi.py  visualize_logs_multi_k.py  visualize_neighbor_overlap.py
DiskANN/: README.md  (+1 more)
DiskANN/apps/: CMakeLists.txt  batch_delete_reinsert.cpp  concurrent_insert_delete.cpp  concurrent_insert_delete_non_uniform_chunks.cpp  concurrent_search.cpp  concurrent_search_only_delete.cpp  concurrent_search_only_delete_fixed_size.cpp  concurrent_search_only_delete_minibatch_consolidate.cpp  concurrent_search_only_insert.cpp  concurrent_search_only_insert_fixed_size.cpp  concurrent_search_windowed_insert_delete.cpp  only_search.cpp
Greator/: CMakeLists.txt  Dockerfile
Greator/include/: pq_flash_index.h  utils.h
Greator/include/greator/: aligned_file_reader.h  cached_io.h  distance.h  linux_aligned_file_reader.h  pq_flash_index.h  pq_table.h
Greator/src/: CMakeLists.txt  distance.cpp  linux_aligned_file_reader.cpp  math_utils.cpp  partition_and_pq.cpp  pq_flash_index.cpp  utils.cpp
Greator/src/convert/: convert.cpp
Greator/tests/: CMakeLists.txt  align_query_file.cpp  build_disk_index.cpp  build_memory_index.cpp  build_stream_merger_disk_index.cpp  lazy_reinsert_batch.cpp  overall_performance.cpp  search_disk_index.cpp  search_memory_index.cpp  test_concurr_insert_search.cpp  test_concurr_merge_insert.cpp  test_incr_intf.cpp  test_incr_ramp_up.cpp  test_incremental_index.cpp
Greator/tests/utils/: CMakeLists.txt  bin_to_fvecs.cpp  bin_to_tsv.cpp  calculate_recall.cpp  compute_groundtruth.cpp  convert_axon_to_bin.cpp  create_disk_layout.cpp  extract_rows.cpp  float_bin_to_int8.cpp  fvecs_to_bin.cpp  gen_random_slice.cpp  generate_pq.cpp  int8_to_float.cpp  ivecs_to_bin.cpp  merge_shards.cpp  normalize_data.cpp  partition_data.cpp  partition_with_ram_budget.cpp  seed_index_merger.cpp  test_l2_avx.cpp  test_partitioning.cpp  test_pq.cpp  test_pq_from_pivots.cpp  tsv_to_bin.cpp  uint32_to_uint8.cpp  uint8_to_float.cpp  update_metadata.cpp
python/: .pypirc.example  CMakeLists.txt  MANIFEST.in  Makefile  PUBLISH.md  README.md  __init__.py  build_milvus_index.py  build_milvus_index.sh  build_pgvector_index.py  build_pgvector_index.sh  build_pinecone_index.py  build_pinecone_index.sh  build_qdrant_index.py  build_qdrant_index.sh  milvus_backend.py  pgvector_backend.py  pinecone_backend.py  pyproject.toml  python_backend_wrapper.h  qvcache_python.cpp  qvcache_split_search_bruteforce_backend.py  qvcache_split_search_milvus_backend.py  qvcache_split_search_pgvector_backend.py  qvcache_split_search_pinecone_backend.py  qvcache_split_search_qdrant_backend.py  run_qvcache_split_search_bruteforce_backend.sh  run_qvcache_split_search_milvus_backend.sh  run_qvcache_split_search_pgvector_backend.sh  run_qvcache_split_search_pinecone_backend.sh  run_qvcache_split_search_qdrant_backend.sh  run_tiered_index_split_search_bruteforce_backend.sh  setup.py  tieredann_python.cpp
python/backends/: bruteforce_backend.py
python/benchmarks/: bruteforce_backend_only.py  calculate_working_set.py  qvcache_benchmark_faiss_backend.py  qvcache_benchmark_pgvector_backend.py  qvcache_benchmark_pinecone_backend.py  qvcache_benchmark_qdrant_backend.py  qvcache_split_search_bruteforce_backend.py  qvcache_split_search_faiss_backend.py  qvcache_split_search_pgvector_backend.py  qvcache_split_search_pinecone_backend.py  qvcache_split_search_qdrant_backend.py  utils.py  windowed_backend_benchmark_faiss_backend.py  windowed_backend_benchmark_pgvector_backend.py  windowed_backend_benchmark_pinecone_backend.py  windowed_backend_benchmark_qdrant_backend.py  windowed_qvcache_benchmark_faiss_backend.py  windowed_qvcache_benchmark_pgvector_backend.py  windowed_qvcache_benchmark_pinecone_backend.py  windowed_qvcache_benchmark_qdrant_backend.py
python/scripts/benchmark/: backend_only_benchmark_faiss_backend.sh  backend_only_benchmark_pgvector_backend.sh  backend_only_benchmark_pinecone_backend.sh  backend_only_benchmark_qdrant_backend.sh  qvcache_benchmark_faiss_backend.sh  qvcache_benchmark_pgvector_backend.sh  qvcache_benchmark_pinecone_backend.sh  qvcache_benchmark_qdrant_backend.sh  windowed_backend_benchmark_faiss_backend.sh  windowed_backend_benchmark_pgvector_backend.sh  windowed_backend_benchmark_pinecone_backend.sh  windowed_backend_benchmark_qdrant_backend.sh  windowed_qvcache_benchmark_faiss_backend.sh  windowed_qvcache_benchmark_pgvector_backend.sh  windowed_qvcache_benchmark_pinecone_backend.sh  windowed_qvcache_benchmark_qdrant_backend.sh
python/scripts/build_index/: build_faiss_index.sh  build_pgvector_index.py  build_pgvector_index.sh  build_pinecone_index.py  build_pinecone_index.sh  build_qdrant_index.sh
python/scripts/run/: __init__.py  (+7 more)
src/: CMakeLists.txt  delete_consolidate_thread_pool.cpp  insert_thread_pool.cpp
tests/: CMakeLists.txt  build_disk_index.cpp  compute_groundtruth.cpp  concurrent_insert_delete_memory_index.cpp  search_disk_index.cpp
tests/diskann/: batch_delete_reinsert_memory_index.cpp  concurrent_insert_delete_memory_index.cpp  diskann_split_search.cpp  search_memory_index.cpp
tests/greator/: build_disk_index.cpp  search_disk_index.cpp
tests/qvcache/: backend_benchmark.cpp  backend_benchmark_sptag.cpp  cache_pressure.cpp  disk_index_search.cpp  memory_index_search.cpp  qvcache_benchmark.cpp  qvcache_benchmark_sptag.cpp  qvcache_search.cpp  qvcache_split_search.cpp  qvcache_split_search_bruteforce_backend.cpp  qvcache_split_search_noisy.cpp  windowed_backend_benchmark.cpp  windowed_backend_benchmark_sptag.cpp  windowed_qvcache_benchmark.cpp  windowed_qvcache_benchmark_sptag.cpp
tests/tieredann/: disk_index_search.cpp  memory_index_search.cpp  mirrored_indexes_search.cpp  tiered_index_search.cpp  tiered_index_split_search.cpp  tiered_index_split_search_bruteforce_backend.cpp  tiered_index_split_search_noisy.cpp
(+173 files in other folders)
