[build-system]
requires = ["setuptools>=61.0", "wheel", "cmake>=3.12", "ninja", "pybind11>=2.10.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "qvcache"
version = "0.1.0"
description = "Python bindings for QVCache - A tiered memory/disk approximate nearest neighbor search library"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "QVCache", email = ""}
]
keywords = ["ann", "nearest-neighbor", "search", "vector-search", "approximate-nearest-neighbor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "pybind11>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools]
packages = ["qvcache"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
qvcache = ["*.py"]

